--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <span class="spinner-grow spinner-grow-sm d-none" role="status" aria-hidden="true"></span>
         </button>
         <button class="btn btn-danger mx-3" id="stop">Stop</button>
+        <button class="btn btn-info mx-3" id="refresh">Refresh media sources</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
